JCK test .vm.classfmt.ins.code__002.code__00201m1.code__00201m1 hangs with -noverify

XMLWordPrintable

    • b10

        The test hangs when run with -noverify. To reproduce the problem run the test outside the harness:

        > java -cp jib-dir/install/jck/11/b09/bundles/JCK-runtime-11.jar/JCK-runtime-11/classes -noverify javasoft.sqe.tests.vm.classfmt.ins.code__002.code__00201m1.code__00201m1

              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Harold Seigel (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: