8210168: JCK test .vm.classfmt.ins.code__002.code__00201m1.code__00201m1 hangs with -noverify

Check for 'bc_length > 0' to handle lengths of -1.

Reviewed-by: coleenp